@@ -1,5 +1,6 @@
 - Fix inplace edit cloning with jquery >= 1.9, when more than one child is cloned
 - Support inplace edit cloning for :radio form_ui
+- Add records parameter to cache_columns_count and related methods (count_query_for_column, mongoid_count_for_column)
 
 = 3.6.10
 - Don't add numerical constraints based on conditional validation
